--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <br/>
     <div id="top_bar">
         <div id="sliders">
+            <div id="county_state"></div>
+            <div id="pop"></div>
+            <br>
             <div id="female_headed_slider_container">
                 <p>
                 <label for="female_headed_amount" id="female_headed_label">Percentage of Female Headed Households&sup1;:</label>
