fade sliders not used in beginning, border, colors, county text size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div id="poverty_children_slider" style=""></div>                    
                 </div>
                 <div class="slider_checkbox_stats">
-                    <input type=checkbox class="checkbox" id="poverty_children_checkbox" checked=true> </input><label class="checkbox_label"></label>
+                    <input type=checkbox class="checkbox" id="poverty_children_checkbox"> </input><label class="checkbox_label"></label>
                     <span class="info_value" id="info_poverty_children">&nbsp</span>
                 </div>
             </div>
