Add custom checkbox-like colored buttons.  Handle undef data

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="slider_tag" id="female_headed_slider" style=""></div>
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="female_headed_checkbox" checked=true> </input><label class="checkbox_label"></label>
+                        <input type=checkbox class="checkbox" id="female_headed_checkbox" checked=true> </input><label class="checkbox_label" for="female_headed_checkbox"></label>
                         <span class="info_value" id="info_female_headed">&nbsp</span>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     </div>
                     <div  class="slider_tag" id="poverty_children_slider" style=""></div>                    
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="poverty_children_checkbox" > </input><label class="checkbox_label"></label>
+                        <input type=checkbox class="checkbox" id="poverty_children_checkbox" > </input><label class="checkbox_label" for="poverty_children_checkbox"></label>
                         <span class="info_value" id="info_poverty_children">&nbsp</span>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                   </div>
                   <div  class="slider_tag" id="no_hs_slider" style=""></div>
                   <div class="slider_checkbox_stats">
-                    <input type=checkbox class="checkbox" id="no_hs_checkbox"> </input><label class="checkbox_label"></label>
+                    <input type=checkbox class="checkbox" id="no_hs_checkbox"> </input><label class="checkbox_label" for="no_hs_checkbox"></label>
                     <span class="info_value" id="info_no_hs">&nbsp</span>
                   </div>
               </div>
