--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
   <body>
   <div id="container">
     <div id="top_bar">
-      <h1>All the Single Mothers: ...something about visualizing female household census data...</h1>
+      <h1>All the Single Mothers: Implications of Female Headed Households</h1>
       <div class="viz_info">
-           In the United States, the number of children in single-mother families has risen dramatically over the past four decades, causing considerable concern among policymakers and the public.1 Researchers have identified the rise in single-parent families (especially mother-child families) as a major factor driving the long-term increase in child poverty in the United States. The effects of growing up in single-parent households have been shown to go beyond economics, increasing the risk of children dropping out of school, disconnecting from the labor force, and becoming teen parents. Although many children growing up in single-parent families succeed, others will face significant challenges in making the transition to adulthood. Children in lower-income, single-parent families face the most significant barriers to success in school and the work force.
+           In the United States, the number of children in <span class="female">single-mother families</span> has risen dramatically over the past four decades.<br>
+           Researchers have identified the rise in single-parent families (especially mother-child families) as a major factor driving the long-term increase in <span class="poverty_children">child poverty in the United States</span>.<br>
+           Growing up in single-parent households has been shown to increase the risk of children <span class="no_hs">dropping out of school</span>, disconnecting from the labor force, and becoming teen parents.<br>
+          <!-- Although many children growing up in single-parent families succeed, others will face significant challenges in making the transition to adulthood.<br>-->
+           Children in <span class="income">lower-income</span>, single-parent families face the most significant barriers to success in school and the work force.
       </div>
     </div>
-    
     <div id="bottom_bar">
         <div id="sliders">
             <div id="county_state_pop">
@@ -34,9 +37,9 @@
             </div>
             <div class="slider_and_stats_container" id="female_headed_slider_container">
                 <div class="slider_container">
-                    <div class="slider_label_amount">                    
+                    <div class="slider_label_amount">
                         <label for="female_headed_amount" id="female_headed_label" class="slider_label">% Female Headed Households&sup1;:</label>
-                        <b><span id="female_headed_amount" class="slider_label_range">30% - 40%</span></b>        
+                        <b><span id="female_headed_amount" class="slider_label_range">20% - 40%</span></b>
                     </div>
                     <div class="slider_tag" id="female_headed_slider" style=""></div>
                     <div class="slider_checkbox_stats">
@@ -46,86 +49,52 @@
                 </div>
 
             </div>
-<!--            <div class="slider_and_stats_container" id="female_headed_slider_container">
-                <div class="slider_container">
-                    <div class="slider_label_amount">                    
-                        <label for="female_headed_amount" id="female_headed_label" class="slider_label">% Female Headed Households&sup1;:</label>
-                        <b><span id="female_headed_amount" class="slider_label_range">30% - 40%</span></b>        
-                    </div>
-                    <div  class="slider_tag" id="female_headed_slider" style=""></div>
-                </div>
-                <div class="slider_checkbox_stats">
-                    <input type=checkbox class="checkbox" id="female_headed_checkbox" checked=true> </input><label class="checkbox_label"></label>
-                    <span class="info_value" id="info_female_headed">&nbsp</span>
-                </div>
-            </div>
--->
-
             <div class="slider_and_stats_container" id="poverty_children_slider_container">
                 <div class="slider_container">
                     <div class="slider_label_amount">
                         <label for="poverty_children_amount" id="poverty_children_label" class="slider_label">Child Poverty Rate&sup1;:</label>
-                        <b><span id="poverty_children_amount" class="slider_label_range">15% - 20%</span></b>
+                        <b><span id="poverty_children_amount" class="slider_label_range">35% - 62%</span></b>
                     </div>
                     <div  class="slider_tag" id="poverty_children_slider" style=""></div>                    
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="poverty_children_checkbox" > </input><label class="checkbox_label"></label>
+                        <input type=checkbox class="checkbox" id="poverty_children_checkbox" checked="true"> </input><label class="checkbox_label"></label>
                         <span class="info_value" id="info_poverty_children">&nbsp</span>
                     </div>
                 </div>
 
             </div>
-
-
-<!--          <div id="poverty_slider_container">
-                <p>
-                <label for="poverty_amount" id="poverty_label">Poverty&sup1;:</label>
-                <b><span id="poverty_amount" class="slider_label">15% - 20%</span></b>
-                <input type=checkbox class="checkbox" id="poverty_checkbox"> </input><label class="checkbox_label"></label>
-                </p>
-            <div id="poverty_slider" style=""></div>
-            </div>
--->
-
-<!--          <div id="unemployment_slider_container">
-                <p>
-                <label for="unemployment_amount" id="unemployment_label">Unemployment&sup1;:</label>
-                <b><span id="unemployment_amount" class="slider_label">15% - 20%</span></b>
-                <input type=checkbox class="checkbox" id="unemployment_checkbox"> </input><label class="checkbox_label"></label>
-                </p>
-            <div id="unemployment_slider" style=""></div>
-            </div>
--->
-
           <div class="slider_and_stats_container" id="no_hs_slider_container">
               <div class="slider_container">
                   <div class="slider_label_amount">
                     <label for="no_hs_amount" id="no_hs_label" class="slider_label">% with no high school&sup1;:</label>
-                    <b><span id="no_hs_amount" class="slider_label_range  ">15% - 20%</span></b>
+                    <b><span id="no_hs_amount" class="slider_label_range  ">25% - 55%</span></b>
                   </div>
                   <div  class="slider_tag" id="no_hs_slider" style=""></div>
                   <div class="slider_checkbox_stats">
-                    <input type=checkbox class="checkbox" id="no_hs_checkbox"> </input><label class="checkbox_label"></label>
+                    <input type=checkbox class="checkbox" id="no_hs_checkbox" disabled="true"> </input><label class="checkbox_label"></label>
                     <span class="info_value" id="info_no_hs">&nbsp</span>
                   </div>
               </div>
             </div>
+
+            <div class="slider_and_stats_container" id="income_slider_container">
+                <div class="slider_container">
+                    <div class="slider_label_amount">
+                        <label for="income_amount" id="income_label" class="slider_label">Median Household Income&sup2;:</label>
+                        <b><span id="income_amount" class="slider_label_range">$18000 - $35000</span></b>
+                    </div>
+                    <div  class="slider_tag" id="income_slider" style=""></div>
+                    <div class="slider_checkbox_stats">
+                        <input type=checkbox class="checkbox" id="income_checkbox" disabled="true"> </input><label class="checkbox_label"></label>
+                        <span class="info_value" id="info_income">&nbsp</span>
+                    </div>
+                </div>
+
+            </div>
+
+
         </div>
       <div id="chart" class="Purples"> </div>
-
-
-<!--        <div id="county_info">
-            <p class="p_additional">Additional info (mouse over a county for detailed info):</p>
-            <p id="p_info_county">County: <b><span id="info_name">&nbsp</span></b></p>
-            <p id="p_info_state">State: <b><span id="info_state">&nbsp</span></b></p>
-            <p id="p_info_pop">Population&sup2;: <span id="info_population">&nbsp</span></p>
-            <p>Percentage of Female Headed Households&sup1;: <span id="info_female_headed">&nbsp</span></p>
-            <p>Poverty Rate (0-17)&sup2;: <span id="info_poverty_children">&nbsp</span></p>
-            <p>Poverty Rate&sup2;: <span id="info_poverty">&nbsp</span></p>
-            <p>Unemployment Rate&sup2;: <span id="info_unemployment">&nbsp</span></p>
-            <p>Percentage of Population with No HS&sup2;: <span id="info_no_hs">&nbsp</span></p>
-        </div>
--->
   </div>
   <script type="text/javascript" src="js/stats.js"></script>
   </body>
