Add custom checkboxes for all data

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="slider_container">
                   <div class="slider_label_amount">
                     <label for="no_hs_amount" id="no_hs_label" class="slider_label">% with no high school&sup1;:</label>
-                    <b><span id="no_hs_amount" class="slider_label_range  ">25% - 55%</span></b>
+                    <b><span id="no_hs_amount" class="slider_label_range">25% - 55%</span></b>
                   </div>
                   <div  class="slider_tag" id="no_hs_slider" style=""></div>
                   <div class="slider_checkbox_stats">
@@ -85,7 +85,7 @@
                     </div>
                     <div  class="slider_tag" id="income_slider" style=""></div>
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="income_checkbox" disabled="true"> </input><label class="checkbox_label"></label>
+                        <input type=checkbox class="checkbox" id="income_checkbox"> </input><label class="checkbox_label" for="income_checkbox"></label>
                         <span class="info_value" id="info_income">&nbsp</span>
                     </div>
                 </div>
