Broken radio buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="slider_tag" id="female_headed_slider" style=""></div>
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="female_headed_checkbox" checked=true> </input><label class="checkbox_label" for="female_headed_checkbox"></label>
+                        <!-- input type=radio class="radio" name="radio_button_set" id="female_headed_checkbox" checked=true> </input><label class="checkbox_label" for="female_headed_checkbox"></label -->
                         <span class="info_value" id="info_female_headed">&nbsp</span>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div  class="slider_tag" id="poverty_children_slider" style=""></div>                    
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="poverty_children_checkbox" > </input><label class="checkbox_label" for="poverty_children_checkbox"></label>
+                        <input type="radio" class="radio" name="radio_button_set" id="poverty_children_checkbox" checked="true"> </input><label class="checkbox_label" for="poverty_children_checkbox"></label>
                         <span class="info_value" id="info_poverty_children">&nbsp</span>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                   </div>
                   <div  class="slider_tag" id="no_hs_slider" style=""></div>
                   <div class="slider_checkbox_stats">
-                    <input type=checkbox class="checkbox" id="no_hs_checkbox"> </input><label class="checkbox_label" for="no_hs_checkbox"></label>
+                    <input type="radio" class="radio" name="radio_button_set" id="no_hs_checkbox"> </input><label class="checkbox_label" for="no_hs_checkbox"></label>
                     <span class="info_value" id="info_no_hs">&nbsp</span>
                   </div>
               </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div  class="slider_tag" id="income_slider" style=""></div>
                     <div class="slider_checkbox_stats">
-                        <input type=checkbox class="checkbox" id="income_checkbox"> </input><label class="checkbox_label" for="income_checkbox"></label>
+                        <input type="radio" class="radio" name="radio_button_set" id="income_checkbox"> </input><label class="checkbox_label" for="income_checkbox"></label>
                         <span class="info_value" id="info_income">&nbsp</span>
                     </div>
                 </div>
