--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
            Growing up in single-parent households has been shown to increase the risk of children <span class="no_hs">dropping out of school</span>, disconnecting from the labor force, and becoming teen parents.<br>
           <!-- Although many children growing up in single-parent families succeed, others will face significant challenges in making the transition to adulthood.<br>-->
            Children in <span class="income">lower-income</span>, single-parent families face the most significant barriers to success in school and the work force.<br>
-           In the United States, the number of children in <span class="female">single-mother families</span> has risen dramatically over the past four decades. Examine these developments below:<br>
+           In the United States, the number of children in <span class="female">single-mother families</span> has risen dramatically over the past four decades.&sup1;<br>
+           <br>
+           Examine the relationships of <span class="poverty_children">child poverty</span>, <span class="no_hs">education level</span>, and <span class="income">median income</span> with <span class="female">percentages of female headed households</span> below:<br>
       </div>
     </div>
     <div id="bottom_bar">
@@ -106,6 +108,7 @@
       <div id="chart" class="Purples"> </div>
       <div id="footer">
       All data from <a href="http://www.ers.usda.gov/data-products/atlas-of-rural-and-small-town-america/download-the-data.aspx" target="_blank">USDA Economic Research Service</a><br>
+      &sup1;Research article from <a href="http://www.prb.org/Publications/PolicyBriefs/singlemotherfamilies.aspx" target="_blank">Population Reference Bureau</a><br>
       Percent of female headed family households (out of total family households): 2006-2010, where a female headed family household represents a household headed by a female with no husband present<br>
       Child poverty rate: 2010, where the child poverty rate is the percent of county population under age 17 living in families with income below their poverty threshold<br>
       Percent with no high school degree: 2006-2010, where the highest completed level of schooling was 12th grade or lower<br>
